Fix date compat with p27

--- a/tox.ini
+++ b/tox.ini
@@ -11,4 +11,6 @@ skipsdist = True
 deps = -r{toxinidir}/requirements-dev.txt
 setenv =
     PYTHONPATH = {toxinidir}
-commands = pytest
+commands =
+    python -V
+    pytest
